<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="logo_content_description">Ballot logo</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="election_information">Election Information</string>
    <string name="follow_election">Follow election</string>
    <string name="unfollow_election">Unfollow election</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot information</string>
    <string name="correspondence_address">Correspondence Address</string>
    <string name="representative_search">Representative Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="use_my_location">Use my location</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="state">State</string>
    <string name="see_representative_webpage">See representative webpage</string>
    <string name="see_representative_facebook_page">See representative Facebook page</string>
    <string name="see_representative_twitter_page">See representative Twitter page</string>
    <string name="representative_photo">Representative photo</string>
    <string name="location_services_disabled_snackbar">Location services must be enabled to display
        representatives using location</string>
    <string name="location_permission_not_granted">Location permission must be granted to display representatives using location</string>
    <string name="location_must_be_in_the_us">Location must be in the US</string>
    <string name="field_required">Field must not be empty</string>
    <string name="zip_length_must_be_5">Zip length must be 5 digits</string>
    <string name="all_fields_must_be_valid">All fields must be valid</string>
    <string name="no_address_available">No address available</string>
    <string name="no_ballot_information_available">No ballot information available</string>
    <string name="no_voting_locations_available">No voting locations available</string>
    <string name="no_representatives_found">No representatives found</string>
    <string name="no_elections_found">No elections found</string>
    <string name="launch_fragment">Launch Fragment</string>
    <string name="representative_fragment">Representative Fragment</string>
    <string name="voter_info_fragment">Voter Info Fragment</string>
    <string name="elections_fragment">Elections Fragment</string>
    <string name="representative_loading_indicator_content_description">Representative data is loading</string>
</resources>