<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.ElectionsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_election_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <TextView
            android:id="@+id/upcoming_elections_title"
            style="@style/TitleStyle"
            android:text="@string/upcoming_elections"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/election_loading_indicator"
            android:layout_width="@dimen/loading_indicator_size"
            android:layout_height="@dimen/loading_indicator_size"
            android:contentDescription="@string/representative_loading_indicator_content_description"
            android:indeterminateDrawable="@drawable/loading_animation"
            app:isProgressBarVisible="@{viewModel.isElectionDataLoading()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcoming_elections_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_padding"
            android:paddingBottom="@dimen/padding_large"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upcoming_elections_title"
            tools:listitem="@layout/elections_list_item" />

        <TextView
            android:id="@+id/upcoming_elections_empty_text_view"
            style="@style/DefaultTextStyle"
            android:text="@string/no_elections_found"
            app:isVisible="@{viewModel.upcomingElections}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upcoming_elections_title" />

        <TextView
            android:id="@+id/saved_elections_title"
            style="@style/TitleStyle"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/saved_elections"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upcoming_elections_recycler_view" />

        <TextView
            android:id="@+id/saved_elections_empty_text_view"
            style="@style/DefaultTextStyle"
            android:text="@string/no_elections_found"
            app:isVisible="@{viewModel.savedElections}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/saved_elections_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/saved_elections_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_padding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/saved_elections_title"
            tools:listitem="@layout/elections_list_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>