<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/apk/res-auto">

    <ConstraintSet android:id="@+id/start">

        <Constraint
            android:id="@+id/search_title"
            style="@style/TitleStyle"
            android:text="@string/representative_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <Constraint
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1">

        </Constraint>

        <Constraint
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <Constraint
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city" />

        <Constraint
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <Constraint
            android:id="@+id/button_search"
            style="@style/WideButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_my_representatives"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <Constraint
            android:id="@+id/button_location"
            style="@style/WideButtonStyle"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/use_my_location"
            app:layout_constraintTop_toBottomOf="@id/button_search" />

        <Constraint
            android:id="@+id/representative_title"
            style="@style/TitleStyle"
            android:text="@string/my_representatives"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location" />

        <Constraint
            android:id="@+id/representative_empty_text_view"
            style="@style/DefaultTextStyle"
            android:text="@string/no_representatives_found"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            app:visibilityMode="ignore" />

        <Constraint
            android:id="@+id/representatives_fragment_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/representative_title" />

    </ConstraintSet>

    <ConstraintSet android:id="@+id/end">

        <Constraint
            android:id="@+id/search_title"
            style="@style/TitleStyle"
            android:text="@string/representative_search"
            app:layout_constraintBottom_toTopOf="@id/address_line_1"
            app:layout_constraintStart_toStartOf="parent" />

        <Constraint
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/address_line_2"
            app:layout_constraintStart_toStartOf="parent" />

        <Constraint
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/city"
            app:layout_constraintStart_toStartOf="parent" />

        <Constraint
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/zip"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent" />

        <Constraint
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city" />

        <Constraint
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/button_search"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent" />

        <Constraint
            android:id="@+id/button_search"
            style="@style/WideButtonStyle"
            android:text="@string/find_my_representatives"
            app:layout_constraintBottom_toTopOf="@id/button_location" />

        <Constraint
            android:id="@+id/button_location"
            style="@style/WideButtonStyle"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/use_my_location"
            app:layout_constraintBottom_toTopOf="@id/representative_title" />

        <Constraint
            android:id="@+id/representative_title"
            style="@style/TitleStyle"
            android:text="@string/my_representatives"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/representative_empty_text_view"
            style="@style/DefaultTextStyle"
            android:text="@string/no_representatives_found"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            app:visibilityMode="ignore" />

        <Constraint
            android:id="@+id/representatives_fragment_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title" />
    </ConstraintSet>

    <Transition
        app:constraintSetEnd="@id/end"
        app:constraintSetStart="@id/start"
        app:duration="1000">
        <OnSwipe
            motion:dragDirection="dragUp"
            motion:touchAnchorId="@+id/representatives_fragment_recycler_view"
            motion:touchAnchorSide="top" />
    </Transition>
    <Transition
        app:constraintSetEnd="@id/start"
        app:constraintSetStart="@+id/end"
        app:duration="1000">
        <OnSwipe
            motion:dragDirection="dragDown"
            motion:touchAnchorId="@+id/representatives_fragment_recycler_view"
            motion:touchAnchorSide="bottom" />
    </Transition>
</MotionScene>